[new] added socketio communication for the whiteboard

--- a/frontend/src/app/components/drawer/drawer.component.css
+++ b/frontend/src/app/components/drawer/drawer.component.css
@@ -41,4 +41,11 @@
     border-bottom: 3px solid gray;
     background-color: rgb(211, 205, 205);
     padding-bottom: 5px;
+    display: flex;
+    flex-direction: row;
+}
+
+.color {
+  margin-top: 0.5%;
+  margin-left: 5%;
 }
