[fix] major fixes at socket communication

--- a/frontend/src/app/components/drawer/drawer.component.html
+++ b/frontend/src/app/components/drawer/drawer.component.html
@@ -5,7 +5,7 @@
         <button (click)="drawCircle()" class="button-81">Circle</button>
         <button (click)="startDrawing()" class="button-81">Pen</button>
         <button (click)="startErasing()" class="button-81">Erase</button>
-        <button (click)="clear()" class="button-81">Clear</button>
+        <button (click)="clear(false)" class="button-81">Clear</button>
         <button class="button-81">Save</button>
         <p class="color">
             Fill:
